--- a/main.ipynb
+++ b/main.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "90d40950",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The test set rmse of rfr:  {4.033556476464403}\n"
+      "The test set rmse of rfr: 4.03\n"
      ]
     }
    ],
@@ -599,8 +599,19 @@
     "\n",
     "\n",
     "# print the test set rmse with f string\n",
-    "print(f\"The test set rmse of rfr: \", {rmse_test})\n",
+    "print(f\"The test set rmse of rfr: {rmse_test:.2f}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "30253e40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so what does that mean\n",
+    "# calculate the train set mse and share if the model is high bias or high variance"
    ]
   }
  ],
